fiz: correct results path

--- a/workflow/notebooks/run_feature_extraction.ipynb
+++ b/workflow/notebooks/run_feature_extraction.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,11 +336,11 @@
     "binary_mask_image.SetSpacing(seg_image.GetSpacing())\n",
     "binary_mask_image.SetOrigin(seg_image.GetOrigin())\n",
     "binary_mask_image.SetDirection(seg_image.GetDirection())\n",
-    "output_path = Path(f\"../../procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Binary_Mask.nii.gz\")\n",
+    "output_path = Path(f\"../../data/procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Binary_Mask.nii.gz\")\n",
     "\n",
     "# save\n",
     "output_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "sitk.WriteImage(binary_mask_image, f\"../../procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Binary_Mask.nii.gz\")\n",
+    "sitk.WriteImage(binary_mask_image, f\"../../data/procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Binary_Mask.nii.gz\")\n",
     "\n",
     "# save cropped MR image \n",
     "mr_cropped_image = sitk.GetImageFromArray(mr_cropped_array)\n",
@@ -348,7 +348,7 @@
     "mr_cropped_image.SetOrigin(mr_image.GetOrigin())\n",
     "mr_cropped_image.SetDirection(mr_image.GetDirection())\n",
     "# Define the output path\n",
-    "mr_output_path = Path(f\"../../procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Cropped_BiasCorrected.nii.gz\")\n",
+    "mr_output_path = Path(f\"../../data/procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/Cropped_BiasCorrected.nii.gz\")\n",
     "\n",
     "# Ensure the output directory exists\n",
     "mr_output_path.parent.mkdir(parents=True, exist_ok=True)\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to CSV\n",
-    "save_radiomics_path = Path(\"../../results/ISPY2/h4h_readii_radiomic_features.csv\")\n",
+    "save_radiomics_path = Path(f\"../../results/radiomics/{DATASET_NAME}/h4h_readii_radiomic_features.csv\")\n",
     "save_radiomics_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "radiomic_df.to_csv(save_radiomics_path, index=False)"
    ]
