fix: correct results path and

--- a/workflow/notebooks/radiomics/run_feature_extraction.ipynb
+++ b/workflow/notebooks/radiomics/run_feature_extraction.ipynb
@@ -475,12 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to CSV\n",
-    "save_radiomics_path = Path(f\"../../results/radiomics/{DATASET_NAME}/h4h_readii_radiomic_features.csv\")\n",
+    "save_radiomics_path = Path(f\"../../data/results/radiomics/{DATASET_NAME}/h4h_readii_radiomic_features.csv\")\n",
     "save_radiomics_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "radiomic_df.to_csv(save_radiomics_path, index=False)"
    ]
