style: update spaces and adding "QT_QPA_PLATFORM=offscreen" to each shell

--- a/workflow/notebooks/radiomics/run_feature_extraction.ipynb
+++ b/workflow/notebooks/radiomics/run_feature_extraction.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# MR paths\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m MR_image_dir_path \u001b[38;5;241m=\u001b[39m \u001b[43mPath\u001b[49m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../data/rawdata/radiomics/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATASET_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/ISPY2-100899/10-26-2002-100899T0-ISPY2MRIT0-88595/51800.000000-ISPY2 VOLSER uni-lateral cropped original DCE-30523/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m nifti_output_path \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../data/procdata/radiomics/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATASET_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/ISPY2_h4h_processed/ISPY2_001/MR_Series-11980/MR.nii.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m bias_corr_path \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../data/procdata/radiomics/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATASET_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/ISPY2_h4h_processed/ISPY2_001/MR_Series-11980/BiasCorrected_MR.nii.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# MR paths\n",
     "MR_image_dir_path = Path(f\"../../data/rawdata/radiomics/{DATASET_NAME}/ISPY2-100899/10-26-2002-100899T0-ISPY2MRIT0-88595/51800.000000-ISPY2 VOLSER uni-lateral cropped original DCE-30523/\")\n",
@@ -95,6 +107,95 @@
     "\n",
     "# SEG path\n",
     "segmentation_file_path = Path(f\"../../data/procdata/radiomics/{DATASET_NAME}/ISPY2_h4h_processed/ISPY2_001/SEG_Series-74565/VOLSER_Analysis_Mask.nii.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(256, 256, 640)\n",
+      "(256, 256, 640)\n",
+      "Cropped MR array shape: (1, 256, 256)\n",
+      "Cropped mask array shape: (1, 256, 256)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MR files\n",
+    "Mr_path = Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/MR_28426823/MR.nii.gz\")\n",
+    "Mr_bias_corr_path =  Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/MR_28426823/BiasCorrected_MR.nii.gz\")\n",
+    "\n",
+    "# SEG\n",
+    "Seg_path = Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/SEG_27048473/GTV.nii.gz\")\n",
+    "\n",
+    "# read mr and seg\n",
+    "mr = sitk.ReadImage(Mr_path)\n",
+    "seg = sitk.ReadImage(Seg_path)\n",
+    "mr_array = sitk.GetArrayFromImage(mr)\n",
+    "seg_array = sitk.GetArrayFromImage(seg)\n",
+    "\n",
+    "print(mr.GetSize())\n",
+    "print(seg.GetSize())\n",
+    "\n",
+    "# Remove slices with no tumor (i.e., slices where all voxel values are 0)\n",
+    "non_empty_slices = np.any(seg_array != 0, axis=(1, 2))\n",
+    "mask_array = seg_array[non_empty_slices]\n",
+    "mr_cropped_array = mr_array[non_empty_slices]\n",
+    "\n",
+    "print(\"Cropped MR array shape:\", mr_cropped_array.shape)\n",
+    "print(\"Cropped mask array shape:\", mask_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SEG image size: (256, 256, 1)\n",
+      "MR bias correctied size: (256, 256, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MR files\n",
+    "Mr_path = Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/MR_28426823/MR.nii.gz\")\n",
+    "Mr_bias_corr_path =  Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/MR_28426823/BiasCorrected_MR.nii.gz\")\n",
+    "\n",
+    "# SEG\n",
+    "Seg_path = Path(f\"../../../data/procdata/radiomics/{DATASET_NAME}/ISPY2-100899_0000/SEG_27048473/GTV.nii.gz\")\n",
+    "\n",
+    "# read mr and seg\n",
+    "mr = sitk.ReadImage(Mr_path)\n",
+    "seg = sitk.ReadImage(Seg_path)\n",
+    "mr_array = sitk.GetArrayFromImage(mr)\n",
+    "seg_array = sitk.GetArrayFromImage(seg)\n",
+    "\n",
+    "# Remove slices with no tumor (i.e., slices where all voxel values are 0)\n",
+    "non_empty_slices = np.any(seg_array != 0, axis=(1, 2))\n",
+    "mask_array = seg_array[non_empty_slices]\n",
+    "mr_cropped_array = mr_array[non_empty_slices]\n",
+    "\n",
+    "# binizried\n",
+    "binary_mask_arr = np.where(mask_array == 0, 1, 0)\n",
+    "binary_mask = sitk.GetImageFromArray(binary_mask_arr)\n",
+    "cropped_mr = sitk.GetImageFromArray(mr_cropped_array)\n",
+    "\n",
+    "print(\"SEG image size:\", binary_mask.GetSize())\n",
+    "print(\"MR bias correctied size:\", cropped_mr.GetSize())"
    ]
   },
   {
@@ -107,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +222,7 @@
    "source": [
     "# Read all DICOM files as a 3D volume\n",
     "reader = sitk.ImageSeriesReader()\n",
-    "dicom_series = reader.GetGDCMSeriesFileNames(str(MR_image_dir_path))\n",
+    "dicom_series = reader.GetGDCMSeriesFileNames(str(M_path))\n",
     "reader.SetFileNames(dicom_series)\n",
     "mri_image = reader.Execute()\n",
     "\n",
@@ -488,9 +589,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ispy2-r2r)",
+   "display_name": "readii_env",
    "language": "python",
-   "name": "ispy2-r2r"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -502,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
